[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "changelog-binder"
version = "0.0.1"
description = "A tool to make disk images using GPT partitions self-verifiable"
authors = [
    "Nicolas Trangez <nicolas.trangez@scality.com>",
]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/scality/changelog-binder"
repository = "https://github.com/scality/changelog-binder.git"
keywords = ["sphinx", "changelog", "releasenotes"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :; Python :: 3.10",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Utilities",
    "Typing :: Typed",
]

include = [
    { path = "tests/", format = "sdist" },
    { path = "docs/", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
]

[tool.poetry.urls]
Homepage = "https://github.com/scality/changelog-binder"
Documentation = "https://scality.github.io/changelog-binder"
Changelog = "https://github.com/scality/changelog-binder/releases"
Issues = "https://github.com/scality/changelog-binder/issues"
"Pull Requests" = "https://github.com/scality/changelog-binder/pulls"

[tool.poetry.scripts]
changelog-binder = "changelog_binder.__main__:main"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.940"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
black = "^20.8b1"
flake8-black = "^0.2.4"
safety = "^1.10.3"
Sphinx = "^4.3.2"
furo = "^2021.11.23"
sphinx-argparse = "^0.3.1"
coverage = {version = "^6.2", extras = ["toml"]}
pygments = "^2.10.0"
pytest = "^6.2.5"
typeguard = "^2.13.3"
xdoctest = {version = "^0.15.10", extras = ["colors"]}
flake8-pytest-style = "^1.5.1"
flake8-pytest = "^1.3"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.1.1"
flake8-return = "^1.1.3"
flake8-expression-complexity = "^0.0.9"
pytest-mock = "^3.6.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["changelog_binder", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
